# cpp-make-project

./: CMakeLists.txt  README.md
source/: main.cpp
